--- a/examples/resourcecontrollerv2/resource-instance-postgres.yaml
+++ b/examples/resourcecontrollerv2/resource-instance-postgres.yaml
@@ -1,4 +1,4 @@
-apiVersion: resourcecontrollerv2.ibm-cloud.crossplane.io/v1alpha1
+apiVersion: resourcecontrollerv2.ibmcloud.crossplane.io/v1alpha1
 kind: ResourceInstance
 metadata:
   name: mypostgres
