--- a/examples/iamaccessgroupsv2/accessgroup.yaml
+++ b/examples/iamaccessgroupsv2/accessgroup.yaml
@@ -1,4 +1,4 @@
-apiVersion: iamaccessgroupsv2.ibm-cloud.crossplane.io/v1alpha1
+apiVersion: iamaccessgroupsv2.ibmcloud.crossplane.io/v1alpha1
 kind: AccessGroup
 metadata:
   name: accessgroup-managers
