--- a/examples/iamaccessgroupsv2/groupmembership.yaml
+++ b/examples/iamaccessgroupsv2/groupmembership.yaml
@@ -1,4 +1,4 @@
-apiVersion: iamaccessgroupsv2.ibm-cloud.crossplane.io/v1alpha1
+apiVersion: iamaccessgroupsv2.ibmcloud.crossplane.io/v1alpha1
 kind: GroupMembership
 metadata:
   name: groupmembership-managers
