--- a/examples/providerconfig-ibm-cloud.yaml
+++ b/examples/providerconfig-ibm-cloud.yaml
@@ -1,4 +1,4 @@
-apiVersion: ibm-cloud.crossplane.io/v1beta1
+apiVersion: ibmcloud.crossplane.io/v1beta1
 kind: ProviderConfig
 metadata:
   name: ibm-cloud
