--- a/package/crds/iampolicymanagementv1.ibmcloud.crossplane.io_customroles.yaml
+++ b/package/crds/iampolicymanagementv1.ibmcloud.crossplane.io_customroles.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.2.4
   creationTimestamp: null
-  name: policies.iampolicymanagementv1.ibm-cloud.crossplane.io
+  name: customroles.iampolicymanagementv1.ibmcloud.crossplane.io
 spec:
   additionalPrinterColumns:
   - JSONPath: .status.bindingPhase
@@ -19,18 +19,18 @@ spec:
   - JSONPath: .metadata.creationTimestamp
     name: AGE
     type: date
-  group: iampolicymanagementv1.ibm-cloud.crossplane.io
+  group: iampolicymanagementv1.ibmcloud.crossplane.io
   names:
-    kind: Policy
-    listKind: PolicyList
-    plural: policies
-    singular: policy
+    kind: CustomRole
+    listKind: CustomRoleList
+    plural: customroles
+    singular: customrole
   scope: Cluster
   subresources:
     status: {}
   validation:
     openAPIV3Schema:
-      description: A Policy represents an instance of an IAM policy on IBM Cloud
+      description: A CustomRole represents an instance of an IAM policy on IBM Cloud
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
@@ -41,7 +41,7 @@ spec:
         metadata:
           type: object
         spec:
-          description: A PolicySpec defines the desired state of a Policy.
+          description: A CustomRoleSpec defines the desired state of a CustomRole.
           properties:
             deletionPolicy:
               description: DeletionPolicy specifies what will happen to the underlying external when this managed resource is deleted - either "Delete" or "Orphan" the external resource. The "Delete" policy is the default when no policy is specified.
@@ -50,80 +50,34 @@ spec:
               - Delete
               type: string
             forProvider:
-              description: PolicyParameters are the configurable fields of a Policy.
+              description: CustomRoleParameters are the configurable fields of a CustomRole.
               properties:
-                description:
-                  description: Customer-defined description.
+                accountId:
+                  description: The account GUID.
                   type: string
-                resources:
-                  description: The resources associated with a policy.
+                actions:
+                  description: The actions of the role.
                   items:
-                    description: 'PolicyResource : The attributes of the resource. Note that only one resource is allowed in a policy.'
-                    properties:
-                      attributes:
-                        description: List of resource attributes.
-                        items:
-                          description: 'ResourceAttribute : An attribute associated with a resource.'
-                          properties:
-                            name:
-                              description: The name of an attribute.
-                              type: string
-                            operator:
-                              description: The operator of an attribute.
-                              type: string
-                            value:
-                              description: The value of an attribute.
-                              type: string
-                          required:
-                          - name
-                          - value
-                          type: object
-                        type: array
-                    type: object
+                    type: string
                   type: array
-                roles:
-                  description: A set of role cloud resource names (CRNs) granted by the policy.
-                  items:
-                    description: 'PolicyRole : A role associated with a policy.'
-                    properties:
-                      roleId:
-                        description: The role cloud resource name granted by the policy.
-                        type: string
-                    required:
-                    - roleId
-                    type: object
-                  type: array
-                subjects:
-                  description: The subjects associated with a policy.
-                  items:
-                    description: 'PolicySubject : The subject attribute values that must match in order for this policy to apply in a permission decision.'
-                    properties:
-                      attributes:
-                        description: List of subject attributes.
-                        items:
-                          description: 'SubjectAttribute : An attribute associated with a subject.'
-                          properties:
-                            name:
-                              description: The name of an attribute.
-                              type: string
-                            value:
-                              description: The value of an attribute.
-                              type: string
-                          required:
-                          - name
-                          - value
-                          type: object
-                        type: array
-                    type: object
-                  type: array
-                type:
-                  description: The policy type; either 'access' or 'authorization'.
+                description:
+                  description: The description of the role.
+                  type: string
+                displayName:
+                  description: The display name of the role that is shown in the console.
+                  type: string
+                name:
+                  description: The name of the role that is used in the CRN. Can only be alphanumeric and has to be capitalized.
+                  type: string
+                serviceName:
+                  description: The service name.
                   type: string
               required:
-              - resources
-              - roles
-              - subjects
-              - type
+              - accountId
+              - actions
+              - displayName
+              - name
+              - serviceName
               type: object
             providerConfigRef:
               description: ProviderConfigReference specifies how the provider that will be used to create, observe, update, and delete this managed resource should be configured.
@@ -160,33 +114,36 @@ spec:
           - forProvider
           type: object
         status:
-          description: A PolicyStatus represents the observed state of a Policy.
+          description: A CustomRoleStatus represents the observed state of a CustomRole.
           properties:
             atProvider:
-              description: PolicyObservation are the observable fields of a Policy.
+              description: CustomRoleObservation are the observable fields of a CustomRole.
               properties:
                 createdAt:
-                  description: The UTC timestamp when the policy was created.
+                  description: The UTC timestamp when the role was created.
                   format: date-time
                   type: string
                 createdById:
-                  description: The iam ID of the entity that created the policy.
+                  description: The iam ID of the entity that created the role.
+                  type: string
+                crn:
+                  description: The role CRN.
                   type: string
                 href:
-                  description: The href link back to the policy.
+                  description: The href link back to the role.
                   type: string
                 id:
-                  description: The policy ID.
+                  description: The role ID.
                   type: string
                 lastModifiedAt:
-                  description: The UTC timestamp when the policy was last modified.
+                  description: The UTC timestamp when the role was last modified.
                   format: date-time
                   type: string
                 lastModifiedById:
-                  description: The iam ID of the entity that last modified the policy.
+                  description: The iam ID of the entity that last modified the role.
                   type: string
                 state:
-                  description: The current state of the policy
+                  description: The current state of the role
                   type: string
               type: object
             conditions:
