--- a/package/crds/ibmclouddatabasesv5.ibmcloud.crossplane.io_whitelists.yaml
+++ b/package/crds/ibmclouddatabasesv5.ibmcloud.crossplane.io_whitelists.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.2.4
   creationTimestamp: null
-  name: groupmemberships.iamaccessgroupsv2.ibm-cloud.crossplane.io
+  name: whitelists.ibmclouddatabasesv5.ibmcloud.crossplane.io
 spec:
   additionalPrinterColumns:
   - JSONPath: .status.bindingPhase
@@ -19,18 +19,18 @@ spec:
   - JSONPath: .metadata.creationTimestamp
     name: AGE
     type: date
-  group: iamaccessgroupsv2.ibm-cloud.crossplane.io
+  group: ibmclouddatabasesv5.ibmcloud.crossplane.io
   names:
-    kind: GroupMembership
-    listKind: GroupMembershipList
-    plural: groupmemberships
-    singular: groupmembership
+    kind: Whitelist
+    listKind: WhitelistList
+    plural: whitelists
+    singular: whitelist
   scope: Cluster
   subresources:
     status: {}
   validation:
     openAPIV3Schema:
-      description: A GroupMembership represents an instance of an IAM policy on IBM Cloud
+      description: A Whitelist represents an instance of a managed service on IBM Cloud
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
@@ -41,8 +41,12 @@ spec:
         metadata:
           type: object
         spec:
-          description: A GroupMembershipSpec defines the desired state of a GroupMembership.
+          description: A WhitelistSpec defines the desired state of a Whitelist.
           properties:
+            connectionTemplates:
+              additionalProperties:
+                type: string
+              type: object
             deletionPolicy:
               description: DeletionPolicy specifies what will happen to the underlying external when this managed resource is deleted - either "Delete" or "Orphan" the external resource. The "Delete" policy is the default when no policy is specified.
               enum:
@@ -50,13 +54,16 @@ spec:
               - Delete
               type: string
             forProvider:
-              description: GroupMembershipParameters are the configurable fields of a GroupMembership.
+              description: WhitelistParameters are the configurable fields of a Whitelist.
               properties:
-                accessGroupId:
-                  description: The Access Group identifier.
+                IfMatch:
+                  description: Verify that the current allowlist matches a provided ETag value. Use in conjunction with the GET operation's ETag header to ensure synchronicity between clients.
                   type: string
-                accessGroupIdRef:
-                  description: Reference to AccessGroupID
+                id:
+                  description: Deployment ID.
+                  type: string
+                idRef:
+                  description: IDRef is a reference to an ICD resource instance used to set ID
                   properties:
                     name:
                       description: Name of the referenced object.
@@ -64,8 +71,8 @@ spec:
                   required:
                   - name
                   type: object
-                accessGroupIdSelector:
-                  description: Selector for AccessGroupID
+                idSelector:
+                  description: SourceSelector selects a reference to an ICD resource instance used to set ID.
                   properties:
                     matchControllerRef:
                       description: MatchControllerRef ensures an object with the same controller reference as the selecting object is selected.
@@ -76,27 +83,19 @@ spec:
                       description: MatchLabels ensures an object with matching labels is selected.
                       type: object
                   type: object
-                members:
-                  description: An array of member objects to add to an access group.
+                ipAddresses:
+                  description: An array of allowlist entries.
                   items:
-                    description: 'AddGroupMembersRequestMembersItem : AddGroupMembersRequestMembersItem struct'
+                    description: 'WhitelistEntry : WhitelistEntry struct'
                     properties:
-                      iamId:
-                        description: The IBMid or Service Id of the member.
+                      address:
+                        description: An IPv4 address or a CIDR range (netmasked IPv4 address).
                         type: string
-                      type:
-                        description: The type of the member, must be either "user" or "service".
+                      description:
+                        description: A human readable description of the address or range for identification purposes.
                         type: string
-                    required:
-                    - iamId
-                    - type
                     type: object
                   type: array
-                transactionID:
-                  description: An optional transaction id for the request.
-                  type: string
-              required:
-              - members
               type: object
             providerConfigRef:
               description: ProviderConfigReference specifies how the provider that will be used to create, observe, update, and delete this managed resource should be configured.
@@ -133,45 +132,13 @@ spec:
           - forProvider
           type: object
         status:
-          description: A GroupMembershipStatus represents the observed state of a GroupMembership.
+          description: A WhitelistStatus represents the observed state of a Whitelist.
           properties:
             atProvider:
-              description: GroupMembershipObservation are the observable fields of a GroupMembership.
+              description: WhitelistObservation are the observable fields of a Whitelist.
               properties:
-                members:
-                  description: The members of an access group.
-                  items:
-                    description: 'ListGroupMembersResponseMember : A single member of an access group in a list.'
-                    properties:
-                      createdAt:
-                        description: The timestamp the membership was created at.
-                        format: date-time
-                        type: string
-                      createdById:
-                        description: The `iam_id` of the entity that created the membership.
-                        type: string
-                      description:
-                        description: If the member type is service, this is the service id's description.
-                        type: string
-                      email:
-                        description: If the member type is user, this is the user's email.
-                        type: string
-                      href:
-                        description: A url to the given member resource.
-                        type: string
-                      iamId:
-                        description: The IBMid or Service Id of the member.
-                        type: string
-                      name:
-                        description: The user's or service id's name.
-                        type: string
-                      type:
-                        description: The member type - either `user` or `service`.
-                        type: string
-                    type: object
-                  type: array
                 state:
-                  description: The current state of the group
+                  description: The current state of the whitelist
                   type: string
               type: object
             conditions:
