--- a/package/crds/resourcecontrollerv2.ibmcloud.crossplane.io_resourceinstances.yaml
+++ b/package/crds/resourcecontrollerv2.ibmcloud.crossplane.io_resourceinstances.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.2.4
   creationTimestamp: null
-  name: resourceinstances.resourcecontrollerv2.ibm-cloud.crossplane.io
+  name: resourceinstances.resourcecontrollerv2.ibmcloud.crossplane.io
 spec:
   additionalPrinterColumns:
   - JSONPath: .status.bindingPhase
@@ -19,7 +19,7 @@ spec:
   - JSONPath: .metadata.creationTimestamp
     name: AGE
     type: date
-  group: resourcecontrollerv2.ibm-cloud.crossplane.io
+  group: resourcecontrollerv2.ibmcloud.crossplane.io
   names:
     kind: ResourceInstance
     listKind: ResourceInstanceList
